firstapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: busybox-deployment
  labels:
    app: busybox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
        - image: busybox
          name: busybox
          command: ["sh", "-c", 'while true; do echo "Running..."; sleep 2h; done']
          imagePullPolicy: Always
          securityContext:
            runAsUser: 3000
            runAsNonRoot: true
            allowPrivilegeEscalation: false
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lazybox-deployment
  labels:
    app: lazybox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lazybox
  template:
    metadata:
      labels:
        app: lazybox
    spec:
      containers:
        - image: busybox
          name: lazybox
          command: ["sh", "-c", 'while true; do echo "Running..."; sleep 2h; done']
          imagePullPolicy: Always
          securityContext:
            runAsUser: 3000
            runAsNonRoot: true
            allowPrivilegeEscalation: false
